# oggm-zarr

./: .coveragerc  LICENSE  README.md  pyproject.toml
.github/workflows/: run-tests.yml
notebooks/: convert_pickles.ipynb  file_conversion.ipynb  gdir_exploration.ipynb  pickle_doomsday.ipynb
src/oggmzarr/: main.py
src/oggmzarr/datacube/: convert.py  geozarr.py  metadata_mapping_coords.yaml  metadata_mapping_data.yaml  update_metadata.py
tests/: conftest.py
tests/datacube/: test_convert.py  test_geozarr.py  test_metadata_mapping.py
