[project]
name = "oggmzarr"
version = "0.1.0"
description = "Zarr standard for storing OGGM data."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 1 - Planning",
    "Private :: Do Not Upload",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: File Formats",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: System :: Archiving :: Compression"
]

dependencies = [
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "xarray>=2026.2.0",
    "zarr>=3.1.6",
    "oggm[full] @ git+https://github.com/OGGM/oggm"
]

[project.optional-dependencies]
tests = [
    "coverage>=7.13.5",
    "geopandas>=1.1.3",
    "pytest>=9.0.3",
]
docs = [
    "sphinx>=9.0.4",
]
dev = [
    "black>=26.3.1",
    "build>=1.4.3",
    "flake8>=7.3.0",
    "hatchling>=1.29.0",
    "isort>=8.0.1",
    "oggmzarr[tests,docs]",
    "pylint>=4.0.5",
    "twine>=6.2.0",
]

[tool.uv.sources]
oggmzarr = { workspace = true }

[project.urls]
"Homepage" = "https://github.com/gampnico/oggm-zarr"
"Bug Tracker" = "https://github.com/gampnico/oggm-zarr/issues"

[tool.hatch.build.targets.sdist]
packages = ["src/oggmzarr"]
exclude = [
    "logs",
    "*.png",
    "*.vtu",
    "*.csv",
    "*.nc",
    "*.bat",
    "*.sh",
    "*.ipynb",
]

[tool.hatch.build.targets.wheel]
packages = ["src/oggmzarr"]

[tool.hatch.metadata]
allow-direct-references = true
